codegen/ui_tests/export_mod_junk_arg.stderr
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-13fbbdaa684db49e.rmeta'
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-1b00becb051b9b4f.rmeta'
error: expecting identifier
  --> ui_tests/export_mod_junk_arg.rs:11:11
   |
11 | #[rhai_fn("wheeeee")]
   |           ^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_mod`
  --> ui_tests/export_mod_junk_arg.rs:22:8
   |
22 |     if test_mod::test_fn(n) {
   |        ^^^^^^^^ use of undeclared crate or module `test_mod`
